Fixed login btn issues, removed =goal reached-, added dark mode to all pages, added account settings

--- a/shared.css
+++ b/shared.css
@@ -45,7 +45,7 @@ nav {
   left: 50%;
   transform: translateX(-50%);
   z-index: 200;
-  width: calc(100% - 4rem);
+  width: calc(100% - 12rem);
   max-width: 1100px;
   display: flex;
   align-items: center;
